EEVEE can't show reflections from hdri - blender v2.83.13 beta #75943

Closed
opened 2020-04-20 19:42:00 +07:00 by Rodrigo · 49 comments

{F8485512}System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 2500 Intel 4.0.0 - Build 10.18.10.5069

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-20 02:11, hash: 23bb42a06e
Worked: version: 2.82.7 (2.82a release)

Short description of error
EEVEE can't show reflections from hdri

Exact steps for others to reproduce the error

{[F8485512](https://archive.blender.org/developer/F8485512/EEVEE_blackreflections_bug.mp4)}**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 2500 Intel 4.0.0 - Build 10.18.10.5069 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-20 02:11, hash: `23bb42a06e` Worked: version: 2.82.7 (2.82a release) **Short description of error** EEVEE can't show reflections from hdri **Exact steps for others to reproduce the error** - Open attached file [0 roughness sphere.blend](https://archive.blender.org/developer/F8487650/0_roughness_sphere.blend)

Added subscriber: @Rodrigo_S.T

Added subscriber: @Rodrigo_S.T

#78947 was marked as duplicate of this issue

#78947 was marked as duplicate of this issue

#78165 was marked as duplicate of this issue

#78165 was marked as duplicate of this issue

#77891 was marked as duplicate of this issue

#77891 was marked as duplicate of this issue
Collaborator

Added subscriber: @ankitm

Added subscriber: @ankitm
Collaborator

Please add a simple blend file to help redo the bug

Please add a simple blend file to help redo the bug
Collaborator

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

i don't think it helps, isn't that specific but anyway
0 roughness sphere.blend

i don't think it helps, isn't that specific but anyway [0 roughness sphere.blend](https://archive.blender.org/developer/F8487650/0_roughness_sphere.blend)
Collaborator

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Your file has no HDRI attached.
And I cannot reproduce this with either the latest stable or current development versions of Blender using any HDRI or a noise texture:

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.
If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

Your file has no HDRI attached. And I cannot reproduce this with either the latest stable or current development versions of Blender using any HDRI or a noise texture: - Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please give us more clear instructions on how to reproduce it from scratch.

Added subscriber: @brecht

Added subscriber: @brecht

Driver version 10.18.10.5069 is also known to have problems (Blender will show a warning the first time it starts about and recommends to upgrade the driver).

This is the latest driver for the HD Graphics 2500:
https://downloadcenter.intel.com/download/29473/Intel-Graphics-Driver-for-Windows-15-33-?product=81501

Driver version 10.18.10.5069 is also known to have problems (Blender will show a warning the first time it starts about and recommends to upgrade the driver). This is the latest driver for the HD Graphics 2500: https://downloadcenter.intel.com/download/29473/Intel-Graphics-Driver-for-Windows-15-33-?product=81501

thanks for the help.Still have the problem, but i guess i can't complain with this hardware

thanks for the help.Still have the problem, but i guess i can't complain with this hardware
Collaborator

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Collaborator

not sure if HD 2500 is supported or not. So needs triage.

not sure if HD 2500 is supported or not. So needs triage.

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

@Rodrigo_S.T, have you tried update the GPU driver.
There are already newer drivers than 10.18.10.5069 (15.33.50.5129 for example).
https://downloadcenter.intel.com/product/81501/Intel-HD-Graphics-2500

@Rodrigo_S.T, have you tried update the GPU driver. There are already newer drivers than `10.18.10.5069` (`15.33.50.5129` for example). https://downloadcenter.intel.com/product/81501/Intel-HD-Graphics-2500

In #75943#921930, @ankitm wrote:
not sure if HD 2500 is supported or not. So needs triage.

don't works like a charm, but works, at least blender 2.82a

In #75943#923821, @mano-wii wrote:
@Rodrigo_S.T, have you tried update the GPU driver.
There are already newer drivers than 10.18.10.5069 (15.33.50.5129 for example).
https://downloadcenter.intel.com/product/81501/Intel-HD-Graphics-2500

there is something strange with the installer
i downloaded the 15.33.50.5129 but it just installs the 10.18.10.5069 driver.png

> In #75943#921930, @ankitm wrote: > not sure if HD 2500 is supported or not. So needs triage. don't works like a charm, but works, at least blender 2.82a > In #75943#923821, @mano-wii wrote: > @Rodrigo_S.T, have you tried update the GPU driver. > There are already newer drivers than `10.18.10.5069` (`15.33.50.5129` for example). > https://downloadcenter.intel.com/product/81501/Intel-HD-Graphics-2500 there is something strange with the installer i downloaded the 15.33.50.5129 but it just installs the 10.18.10.5069 ![driver.png](https://archive.blender.org/developer/F8512106/driver.png)

Perhaps your laptop's software prevents installation of the drivers from the GPU manufacturer's website.
I've seen similar problems, and the user somehow managed to get around the situation.
You may be more successful on Intel-specific support sites.

Perhaps your laptop's software prevents installation of the drivers from the GPU manufacturer's website. I've seen similar problems, and the user somehow managed to get around the situation. You may be more successful on Intel-specific support sites.

I've tried to install without driver signature thing but it doesn't work either

I've tried to install without driver signature thing but it doesn't work either

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @RC12

Added subscriber: @RC12

I have the same issue on Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5129, updating the driver didn't help, it updated from v10.18.10.5100 to v10.18.10.5129. The entire world background gets ignored by the shading, background contributes to diffuse lighting but not to reflections

I have the same issue on Intel(R) HD Graphics 4000 Intel 4.0.0 - Build 10.18.10.5129, updating the driver didn't help, it updated from v10.18.10.5100 to v10.18.10.5129. The entire world background gets ignored by the shading, background contributes to diffuse lighting but not to reflections

Nothing changed with 2.83 LTS.
the funny thing is that volumetric,sss,ssr,ao,soft shadows all this things that seems heavier than simple hdri reflections,works

Nothing changed with 2.83 LTS. the funny thing is that volumetric,sss,ssr,ao,soft shadows all this things that seems heavier than simple hdri reflections,works

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Someone on discord had this issue on Intel HD 4400 with driver version 10.18.14.5117. Intel HD 4400 is a supported gpu according to this https://www.blender.org/download/requirements/

Someone on discord had this issue on Intel HD 4400 with driver version 10.18.14.5117. Intel HD 4400 is a supported gpu according to this https://www.blender.org/download/requirements/

Added subscriber: @fclem

Added subscriber: @fclem

I don't understand why this happens. If any of you can try to compile 2.83 before 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect.

I don't understand why this happens. If any of you can try to compile 2.83 **before** 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect.

In #75943#969432, @fclem wrote:
I don't understand why this happens. If any of you can try to compile 2.83 before 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect.

Tbh i have no idea how to compile blender before a specific commit. I'm trying to learn.

> In #75943#969432, @fclem wrote: > I don't understand why this happens. If any of you can try to compile 2.83 **before** 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect. Tbh i have no idea how to compile blender before a specific commit. I'm trying to learn.

Added subscribers: @emanuelmendes118, @lichtwerk

Added subscribers: @emanuelmendes118, @lichtwerk

In #75943#969432, @fclem wrote:
I don't understand why this happens. If any of you can try to compile 2.83 before 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect.

It is working on compile before that commit
working version: 2.83 (sub 8), branch: master, commit date: 2020-03-11 16:12, hash: c476c36e40
image.png

> In #75943#969432, @fclem wrote: > I don't understand why this happens. If any of you can try to compile 2.83 **before** 7dd0be9554 and see if that fixes the issue. If it's not this commit it would be nice to bisect. It is working on compile before that commit working version: 2.83 (sub 8), branch: master, commit date: 2020-03-11 16:12, hash: `c476c36e40` ![image.png](https://archive.blender.org/developer/F8658667/image.png)

@RC12 and is 7dd0be9554 broken?

@RC12 and is 7dd0be9554 broken?

Yes, it appears black on 7dd0be9554
image.png
on working version c476c36e40 it looks like this
image.png

Yes, it appears black on `7dd0be9554` ![image.png](https://archive.blender.org/developer/F8659712/image.png) on working version `c476c36e40` it looks like this ![image.png](https://archive.blender.org/developer/F8659719/image.png)

Added subscriber: @mbutscher

Added subscriber: @mbutscher

I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e40 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem.

I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e4008 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem.

In #75943#972966, @emanuelmendes118 wrote:
I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e40 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem.

Here's a compiled version: https://drive.google.com/file/d/13fRv0uuFpn3usFK6xEY9_XXOEPOiNKcZ/view?usp=sharing

Another thing I've noticed between these two builds is that 7dd0be9554 displays the studio lights completely black, while c476c36e40 displays them properly
HDRI's from the world nodes display fine

Broken (7dd0be9554):
image.png

Working (c476c36e40):
image.png

> In #75943#972966, @emanuelmendes118 wrote: > I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e4008 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem. Here's a compiled version: https://drive.google.com/file/d/13fRv0uuFpn3usFK6xEY9_XXOEPOiNKcZ/view?usp=sharing Another thing I've noticed between these two builds is that `7dd0be9554` displays the studio lights completely black, while `c476c36e40` displays them properly HDRI's from the world nodes display fine Broken (`7dd0be9554`): ![image.png](https://archive.blender.org/developer/F8666666/image.png) Working (`c476c36e40`): ![image.png](https://archive.blender.org/developer/F8666669/image.png)

In #75943#973270, @RC12 wrote:

In #75943#972966, @emanuelmendes118 wrote:
I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e40 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem.

Here's a compiled version: https://drive.google.com/file/d/13fRv0uuFpn3usFK6xEY9_XXOEPOiNKcZ/view?usp=sharing

I can confirm it does work as intended on this build as well. Thank you itwork.png

> In #75943#973270, @RC12 wrote: >> In #75943#972966, @emanuelmendes118 wrote: >> I really tried compiling the commit before 7dd0be9554 but couldn't. Cloned the repo, then checkout c476c36e4008 then make update, it found an error but I tried again. Then make for building, but configuration failed. If anyone could help me getting it build, I could test it as well given I had the same problem. > > Here's a compiled version: https://drive.google.com/file/d/13fRv0uuFpn3usFK6xEY9_XXOEPOiNKcZ/view?usp=sharing I can confirm it does work as intended on this build as well. Thank you ![itwork.png](https://archive.blender.org/developer/F8668271/itwork.png)

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Can any of you post their system-info.txt?

Can any of you post their `system-info.txt`?

@RC12 Also if you could test this patch

diff --git a/source/blender/gpu/intern/gpu_extensions.c b/source/blender/gpu/intern/gpu_extensions.c
index ab55fcfb1e0..07decc09667 100644
--- a/source/blender/gpu/intern/gpu_extensions.c
+++ b/source/blender/gpu/intern/gpu_extensions.c
@@ -204,7 +204,7 @@ bool GPU_arb_base_instance_is_supported(void)
 
 bool GPU_arb_texture_cube_map_array_is_supported(void)
 {
-  return GG.glew_arb_texture_cube_map_array_is_supported;
+  return false;
 }
 
 bool GPU_mip_render_workaround(void)
@RC12 Also if you could test this patch ``` diff --git a/source/blender/gpu/intern/gpu_extensions.c b/source/blender/gpu/intern/gpu_extensions.c index ab55fcfb1e0..07decc09667 100644 --- a/source/blender/gpu/intern/gpu_extensions.c +++ b/source/blender/gpu/intern/gpu_extensions.c @@ -204,7 +204,7 @@ bool GPU_arb_base_instance_is_supported(void) bool GPU_arb_texture_cube_map_array_is_supported(void) { - return GG.glew_arb_texture_cube_map_array_is_supported; + return false; } bool GPU_mip_render_workaround(void) ```

Applied the patch and its working!
Here's my system info file: system-info.txt
image.png
And the build for anyone who want to test it
https://drive.google.com/file/d/1foll2wlJbiRKmgrAB1x80sbfSh---eCm/view?usp=sharing

Applied the patch and its working! Here's my system info file: [system-info.txt](https://archive.blender.org/developer/F8672812/system-info.txt) ![image.png](https://archive.blender.org/developer/F8672806/image.png) And the build for anyone who want to test it https://drive.google.com/file/d/1foll2wlJbiRKmgrAB1x80sbfSh---eCm/view?usp=sharing

it works here too
but i had another problem, sometimes while i'm changing some material properties, and it don't even have to be in look n' dev or render mode.
image.png
i not sure if it's something with eevee or 2.90 alpha.

the compilation Rahul Chaudhary did (c476c36e40) worked fine.

it works here too but i had another problem, sometimes while i'm changing some material properties, and it don't even have to be in look n' dev or render mode. ![image.png](https://archive.blender.org/developer/F8675703/image.png) i not sure if it's something with eevee or 2.90 alpha. the compilation Rahul Chaudhary did (c476c36e40) worked fine.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-07 17:55:09 +07:00

This issue was referenced by 3e36829394

This issue was referenced by 3e36829394bb652dc4c8225e872fcea79ae434cb

This issue was referenced by ff97545c50

This issue was referenced by ff97545c50f458a62a2ea412f8411f8bb34b9c1c

I've just compiled and everything is running nice.
Thank you Clément and Rahul

I've just compiled and everything is running nice. Thank you Clément and Rahul
Collaborator

Added subscribers: @Hung2003, @JacquesLucke

Added subscribers: @Hung2003, @JacquesLucke
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75943
There is no content yet.