Fix T75943 EEVEE: Cubemaps shows black

Caused by faulty driver implementation. Force fallback method.