source/blender/gpu/intern/gpu_extensions.c
@@ -348,6 +348,12 @@ void gpu_extensions_init(void)
     GG.mip_render_workaround = true;
   }
 
+  /* Intel Ivy Bridge GPU's seems to have buggy cubemap array support. (see T75943) */
+  if (GPU_type_matches(GPU_DEVICE_INTEL, GPU_OS_WIN, GPU_DRIVER_OFFICIAL) &&
+      (strstr(renderer, "HD Graphics 4000") || strstr(renderer, "HD Graphics 2500"))) {
+    GG.glew_arb_texture_cube_map_array_is_supported = false;
+  }
+
   /* df/dy calculation factors, those are dependent on driver */
   GG.dfdyfactors[0] = 1.0;
   GG.dfdyfactors[1] = 1.0;
